--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,22 @@
-/vendor/
-node_modules/
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
 npm-debug.log
 yarn-error.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
+/.fleet
+/.idea
+/.vscode
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
